feat: added sum - added lt4 functionality - added test